Fix: Nav bar visible only if logged in.

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,13 @@ a {
   text-align: center;
 }
 
+.middle-screen {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .active {
   font-weight: bold;
 }
